--- a/public/index.html
+++ b/public/index.html
@@ -183,6 +183,48 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <div class="fixed bottom-4 left-4 z-40">
+    <button onclick="openDeleteModal()" class="text-xs text-red-400 hover:text-red-600 font-bold flex items-center gap-1 opacity-50 hover:opacity-100 transition-opacity">
+        <i class="ph ph-trash"></i> Eliminar Cuenta
+    </button>
+</div>
+
+<div id="deleteModal" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50 backdrop-blur-sm">
+    <div class="bg-white p-6 rounded-2xl shadow-2xl w-full max-w-sm border-t-8 border-red-600 animate-bounce-in">
+        
+        <div class="text-center mb-4">
+            <div class="bg-red-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-3">
+                <i class="ph ph-warning text-3xl text-red-600"></i>
+            </div>
+            <h2 class="text-xl font-bold text-gray-800">¿Estás seguro?</h2>
+            <p class="text-gray-500 text-sm mt-1">Esta acción borrará <b>todos tus datos</b> permanentemente. No se puede deshacer.</p>
+        </div>
+
+        <form id="deleteAccountForm" class="space-y-4">
+            <div>
+                <label class="block text-xs font-bold text-gray-700 uppercase mb-1">Confirma con tu contraseña</label>
+                <div class="relative">
+                    <i class="ph ph-lock-key absolute left-3 top-3 text-gray-400"></i>
+                    <input type="password" name="password" required 
+                        class="w-full pl-9 p-2.5 border border-red-200 rounded-lg focus:ring-2 focus:ring-red-500 outline-none text-sm" 
+                        placeholder="Tu contraseña actual">
+                </div>
+            </div>
+
+            <div class="flex gap-3 pt-2">
+                <button type="button" onclick="closeDeleteModal()" class="flex-1 py-2.5 bg-gray-100 text-gray-700 font-bold rounded-lg hover:bg-gray-200 transition">
+                    Cancelar
+                </button>
+                <button type="submit" class="flex-1 py-2.5 bg-red-600 text-white font-bold rounded-lg hover:bg-red-700 shadow-lg transition flex justify-center items-center gap-2">
+                    Si, eliminar
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script src="script.js"></script>
+
+
 </body>
 </html>
