feat: agregados archivos html para recuperación de contraseña

--- a/public/login.html
+++ b/public/login.html
@@ -58,6 +58,12 @@
                 </div>
             </div>
 
+            <div class="flex justify-end mb-4">
+                <a href="forgot.html" class="text-sm text-blue-600 hover:text-blue-800 font-semibold transition-colors">
+                    ¿Olvidaste tu contraseña?
+                </a>
+            </div>
+
             <button type="submit" id="loginBtn" class="w-full bg-blue-900 hover:bg-blue-800 text-white font-bold py-3 rounded-xl transition shadow-lg transform active:scale-95 flex justify-center items-center gap-2">
                 Ingresar <i class="ph ph-sign-in"></i>
             </button>
