--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -6,6 +6,7 @@
     <title>Nueva Contraseña</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="bg-slate-900 flex items-center justify-center h-screen px-4">
     <div class="bg-white p-8 rounded-xl shadow-lg w-full max-w-sm border-t-8 border-green-500">
