--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,12 @@
 
 <nav class="bg-blue-900 text-white p-3 shadow-md relative z-40">
     <div class="container mx-auto flex justify-between items-center px-2">
-        <h1 class="text-xl font-bold flex items-center gap-2">
-            <i class="ph ph-church text-2xl"></i> 
-            <span>Gestión Marista</span>
+        
+        <h1 id="welcomeTitle" class="text-lg md:text-xl font-bold flex flex-col leading-tight">
+            <span class="flex items-center gap-2">
+                <i class="ph ph-church text-2xl"></i> 
+                <span>Gestión Marista</span>
+            </span>
         </h1>
 
         <button id="btnLogout" class="p-2 bg-blue-800 hover:bg-red-600 rounded-full transition-colors shadow-sm border border-blue-700" title="Cerrar Sesión">
